--- a/index.html
+++ b/index.html
@@ -3,57 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Minesweeper — 3 Levels</title>
+  <title>🎀 Cute Classroom Minesweeper</title>
   <style>
     :root{
-      --bg:#f4f6fa;
-      --panel:#ffffff;
-      --border:#d1d5db;
-      --text:#111827;
-      --muted:#6b7280;
-      --accent:#3b82f6;
-      --accent-2:#2563eb;
+      --bg:#fff8f0;
+      --panel:#fff;
+      --border:#fcd9b8;
+      --text:#4b2e05;
+      --muted:#996b3b;
+      --accent:#ffb86b;
+      --accent-2:#ff9f43;
       --danger:#ef4444;
       --warning:#f59e0b;
       --success:#22c55e;
-      --tile:#f9fafb;
-      --tile-hover:#e5e7eb;
-      --tile-revealed:#f1f5f9;
+      --tile:#fff4e0;
+      --tile-hover:#ffe3c8;
+      --tile-revealed:#fff0da;
       --radius:12px;
-      --shadow:0 4px 15px rgba(0,0,0,.1);
+      --shadow:0 4px 12px rgba(0,0,0,.1);
     }
-    
     *{box-sizing:border-box;}
     body{
       margin:0; background:var(--bg); color:var(--text);
-      font-family: 'Segoe UI',sans-serif; display:flex; flex-direction:column; align-items:center; min-height:100vh; padding:20px;
+      font-family:'Comic Sans MS','Segoe UI',sans-serif;
+      display:flex; flex-direction:column; align-items:center; min-height:100vh; padding:20px;
     }
 
-    h1{margin-bottom:10px;}
+    h1{margin:10px 0; text-shadow:1px 1px 0 #fff;}
 
-    header{background:var(--panel); border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow); padding:15px 25px; margin-bottom:20px; text-align:center;}
-    select,button{border:1px solid var(--border); border-radius:var(--radius); padding:8px 12px; margin:5px; background:#fff; font-weight:600; cursor:pointer;}
-    button.primary{background:var(--accent); color:#fff; border:none;}
-    button.primary:hover{background:var(--accent-2);}
+    header{
+      background:var(--panel); border:2px solid var(--border); border-radius:var(--radius);
+      box-shadow:var(--shadow); padding:15px 25px; margin-bottom:20px; text-align:center;
+    }
+
+    select,button{
+      border:2px solid var(--border); border-radius:var(--radius); padding:8px 12px; margin:5px;
+      background:var(--accent); color:#fff; font-weight:600; cursor:pointer;
+      box-shadow:0 3px 0 #e08e37; transition:all .15s ease;
+    }
+    select:hover,button:hover{background:var(--accent-2);}
+    button.primary{background:var(--success); box-shadow:0 3px 0 #15803d;}
+    button.primary:hover{background:#16a34a;}
 
     .stats{display:flex; gap:10px; justify-content:center; margin:10px;}
-    .stat{background:var(--panel); border:1px solid var(--border); border-radius:var(--radius); padding:8px 12px; box-shadow:var(--shadow);}
+    .stat{
+      background:#fff3e6; border:2px solid var(--border); border-radius:var(--radius);
+      padding:8px 12px; box-shadow:inset 0 1px 0 #fff8f0; font-size:15px;
+    }
 
-    .board{display:grid; gap:4px; justify-content:center; background:var(--panel); border-radius:var(--radius); border:1px solid var(--border); padding:10px;}
+    .board{
+      display:grid; gap:4px; justify-content:center; background:var(--panel);
+      border-radius:var(--radius); border:3px solid var(--border); padding:10px; box-shadow:var(--shadow);
+    }
 
     .cell{
-      width:28px; height:28px; display:grid; place-items:center; background:var(--tile); border:1px solid var(--border); border-radius:6px; cursor:pointer; font-weight:600;
+      width:30px; height:30px; display:grid; place-items:center; background:var(--tile);
+      border:2px solid #fce5cc; border-radius:8px; cursor:pointer; font-weight:700;
+      font-size:16px; transition:transform .05s ease, background .15s ease;
     }
-    .cell:hover{background:var(--tile-hover);}  
-    .cell.revealed{background:var(--tile-revealed); cursor:default;}
+    .cell:hover{background:var(--tile-hover); transform:translateY(-2px);}
+    .cell.revealed{background:var(--tile-revealed); cursor:default; transform:none;}
     .cell.flag{color:var(--warning);}
     .cell.mine{color:var(--danger);}
-    .n1{color:#3b82f6;} .n2{color:#16a34a;} .n3{color:#dc2626;} .n4{color:#9333ea;} .n5{color:#ea580c;} .n6{color:#0891b2;} .n7{color:#71717a;} .n8{color:#000;}
+
+    .n1{color:#3b82f6;} .n2{color:#16a34a;} .n3{color:#dc2626;} .n4{color:#9333ea;}
+    .n5{color:#ea580c;} .n6{color:#0891b2;} .n7{color:#71717a;} .n8{color:#000;}
+
+    footer{margin-top:20px; color:var(--muted); font-size:14px;}
   </style>
 </head>
 <body>
   <header>
-    <h1>💣 Minesweeper — 3 Levels</h1>
+    <h1>🎀 Cute Classroom Minesweeper</h1>
     <div>
       <label>Level:</label>
       <select id="difficulty">
@@ -71,6 +92,8 @@
   </header>
 
   <div class="board" id="board"></div>
+
+  <footer>💡 Tip: First click is always safe! Long-press to plant a flag. 🎈</footer>
 
   <script>
     const boardEl = document.getElementById('board');
@@ -111,7 +134,7 @@
 
     function placeMines(sr,sc){let placed=0;while(placed<mines){let r=Math.floor(Math.random()*rows),c=Math.floor(Math.random()*cols);if(Math.abs(r-sr)<=1&&Math.abs(c-sc)<=1)continue;const cell=grid[r][c];if(!cell.mine){cell.mine=true;placed++;}}for(let r=0;r<rows;r++)for(let c=0;c<cols;c++){if(!grid[r][c].mine){grid[r][c].count=neighbors(r,c).filter(n=>n.mine).length;}}}
 
-    function reveal(cell){if(cell.revealed||cell.flag||gameOver)return;cell.revealed=true;cell.el.classList.add('revealed');if(cell.mine){cell.el.textContent='💣';gameOver=true;alert('💥 Boom!');return;}revealedCount++;safeCellsEl.textContent=revealedCount;if(cell.count>0){cell.el.textContent=cell.count;cell.el.classList.add('n'+cell.count);}else{neighbors(cell.r,cell.c).forEach(n=>{if(!n.revealed)reveal(n);});}if(revealedCount===rows*cols-mines){alert(`🎉 Win in ${time}s!`);gameOver=true;}}
+    function reveal(cell){if(cell.revealed||cell.flag||gameOver)return;cell.revealed=true;cell.el.classList.add('revealed');if(cell.mine){cell.el.textContent='💣';cell.el.style.background='#ffdede';gameOver=true;alert('💥 Boom! You hit a mine!');return;}revealedCount++;safeCellsEl.textContent=revealedCount;if(cell.count>0){cell.el.textContent=cell.count;cell.el.classList.add('n'+cell.count);}else{neighbors(cell.r,cell.c).forEach(n=>{if(!n.revealed)reveal(n);});}if(revealedCount===rows*cols-mines){alert(`🎉 You cleared the board in ${time}s! Great job!`);gameOver=true;}}
 
     function clickCell(cell){if(firstClick){placeMines(cell.r,cell.c);firstClick=false;startTimer();}reveal(cell);}
 
